classDiagram
    direction LR
    IPropertyFile_7_3Visitor~T~ <|-- PropertyFile_7_3BaseVisitor~T~
    PropertyFile_7_3BaseVisitor~T~ <|-- PropertyFileLoader
    note for IPropertyFile_7_3Visitor "ANTLR generates from PropertyFile_7_3.g4"
    class IPropertyFile_7_3Visitor {
        <<interface>>
        +VisitFile()
        +VisitProp()
    }
    note for PropertyFile_7_3BaseVisitor "ANTLR generates from PropertyFile_7_3.g4"
    class PropertyFile_7_3BaseVisitor {
        +VisitFile()
        +VisitProp()
    }
    note for PropertyFileLoader "Application code"
    class PropertyFileLoader{
        +VisitProp()
    }